# subtitle-translator-rust

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  README.md  package-lock.json  package.json  updater_key.key.pub
.github/workflows/: release.yml
scripts/: extract_changelog.mjs  set_version.mjs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  engine.rs  follow.rs  kodi_client.rs  lib.rs  live.rs  main.rs  orchestrate.rs  pricing.rs  services.rs  settings.rs  srt.rs  tools.rs  track_matcher.rs
src-tauri/src/ffmpeg/: extract.rs  mod.rs  probe.rs  remux.rs
src-tauri/tests/: ffmpeg_pipeline.rs
src/lib/: KodiFollow.svelte  KodiTab.svelte  LiveDownload.svelte  MainTab.svelte  ModelPicker.svelte  NumberField.svelte  SettingsTab.svelte  TrackSelection.svelte  stores.ts  tauri.ts  types.ts  updater.ts
src/routes/: +page.svelte
